2005-06-22 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Using bold font correctly.  (It was only appropriately
 applied when the preferences were updated.)

 Removed caching (over complicated logic) from NSAttributedString.

 * TalkSoup.app: I am a fricking retard.  I had doubleReleaseCheck on.
 Yes.  That is why it was slow.  I... am... a... retard.
 
 Retard
 Retard
 Retard

 TalkSoup is fast again.

2005-06-20 Andrew Ruder <aeruder@ksu.edu>
 * All: Additional header changes/code tweaks to allow clean compilation
 on OS X.  (Still no .nib files though... :-/)
 
 * All: Improvements on reducing autorelease usage.

 * GNUstepOutput: Force use of NSMessagePort even when the default is
 something else.

2005-06-17 Andrew Ruder <aeruder@ksu.edu>
 * Testing: Added a IRCSwarm testing tool that can replay preprocessed
 xchat logs (perl scripts can be easily written to process any type of log).
 It will connect to a server and more or less replay those logs.  Useful for
 debugging large amounts of messages.
 
2005-06-13 Andrew Ruder <aeruder@ksu.edu>
 * All: Filled in lots of headers that will be needed for
 OS X compilation.  Fixed relative paths in GNUmakefile.preambles
 in Output/GNUstepOutput and Input/NetclassesInput.

 * GNUstepOutput: /topic command works again, fixed topic inspector to
 stop double querying the topic.

2005-06-12 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: dns_helper returns the reverse lookup of the hostname
 as well.

2005-06-09 Andrew Ruder <aeruder@ksu.edu>
 * GNUstepOutput: Added a helper tool class to ease use of external
 tools + distributed objects.

 Moved /server dns look ups to a helper tool

 Added /alias,/unalias and a default set of aliases

 * NetclassesInput: Added a warning when using a package version < 1.04

 * Highlighting: Added back in the preferences to new preferences system.

 * DCCSupport: Added back in the preferences to new preferences system

2005-06-08 Andrew Ruder <aeruder@ksu.edu>